[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "pdf-form-filler-mcp"
version = "0.1.1"
description = "MCP server for filling PDF forms (AcroForm and XFA)"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pymupdf>=1.24.0",
    "pypdf>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yurivict/pdf-form-filler-mcp"
Repository = "https://github.com/yurivict/pdf-form-filler-mcp"
"Bug Tracker" = "https://github.com/yurivict/pdf-form-filler-mcp/issues"

[project.scripts]
pdf-form-filler-mcp = "pdf_form_filler_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "requests>=2.28.0",
]
